# capezone-assignment

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
DealManager/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
